fixed the look of the about buttons, and the alignment btm about.html

--- a/css/index.css
+++ b/css/index.css
@@ -3,60 +3,153 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 * {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
@@ -70,28 +163,30 @@ p {
     width: 800px;
     margin: 0 auto;
 }
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
+
 header nav {
     width: 75%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 header nav a {
     color: black;
     text-decoration: none;
 }
-header .lambda-black {
-justify-content: flex-start;
-align-self: center;
-padding-bottom: 25px;
-}
 
+header .lambda-black {
+    justify-content: flex-start;
+    align-self: center;
+    padding-bottom: 25px;
+}
 
 .top-content {
     display: flex;
@@ -104,14 +199,14 @@ padding-bottom: 25px;
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
-}
-.top-content .text-container2 {
-    width: 100%;
-    padding:20px 0 20px;  
-    font-weight: bold;
+    padding-bottom: 20px;
 }
 
+.top-content .text-container2 {
+    width: 100%;
+    padding: 20px 0 20px;
+    font-weight: bold;
+}
 
 .middle-content {
     margin-bottom: 20px;
@@ -120,28 +215,23 @@ padding-bottom: 25px;
 
 .middle-content2 {
     margin-bottom: 20px;
- 
 }
+
 .middle-content h2 {
     padding: 0 2%;
     margin-bottom: 0;
-  
 }
 
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
-  
 }
 
 .middle-content2 .boxes {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-
-  
 }
 
 .middle-content .boxes .box {
@@ -153,43 +243,71 @@ padding-bottom: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
-   
 }
-.middle-content .boxes .box1{background:teal; }
-.middle-content .boxes .box2{background-color: gold; }
-.middle-content .boxes .box3{background-color: cadetblue;}
-.middle-content .boxes .box4{background-color: coral;}
-.middle-content .boxes .box5{background-color:crimson; }
-.middle-content .boxes .box6{background-color:forestgreen;}
-.middle-content .boxes .box7{background-color:darkorchid; }
-.middle-content .boxes .box8{background-color: hotpink;}
-.middle-content .boxes .box9{background-color:indigo; }
-.middle-content .boxes .box10{background-color: dodgerblue;
+
+.middle-content .boxes .box1 {
+    background: teal;
 }
-.more{
-  border: 2px solid black;
-  border-radius: 5px;
-  margin: 20px 0 40px;
-  width: 42%;
-  justify-content: space-evenly;
-  text-align: center;
-  font-weight: bold;
-  
+
+.middle-content .boxes .box2 {
+    background-color: gold;
+}
+
+.middle-content .boxes .box3 {
+    background-color: cadetblue;
+}
+
+.middle-content .boxes .box4 {
+    background-color: coral;
+}
+
+.middle-content .boxes .box5 {
+    background-color: crimson;
+}
+
+.middle-content .boxes .box6 {
+    background-color: forestgreen;
+}
+
+.middle-content .boxes .box7 {
+    background-color: darkorchid;
+}
+
+.middle-content .boxes .box8 {
+    background-color: hotpink;
+}
+
+.middle-content .boxes .box9 {
+    background-color: indigo;
+}
+
+.middle-content .boxes .box10 {
+    background-color: dodgerblue;
+}
+
+.more {
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 15px 0 20px;
+    width: 35%;
+    justify-content: space-evenly;
+    text-align: center;
+    font-weight: bold;
+    padding: 5px;
 }
 
 .middle-content2 .boxes .about {
- width: 42%;
-margin-right: 30px;
-margin-bottom: 45px;
- color: black;
-
- align-items: center;
- border-bottom: 1px dashed black;
+    width: 42%;
+    margin-right: 30px;
+    margin-bottom: 35px;
+    color: black;
+    align-items: center;
+    border-bottom: 1px dashed black;
 }
+
 .middle-content2 .boxes .about h3 {
     font-weight: bold;
 }
-
 
 .bottom-content {
     display: flex;
@@ -211,7 +329,7 @@ margin-bottom: 45px;
 
 .bottom-content-about p {
     font-size: 15px;
-    padding-bottom: 20px;
+    padding-bottom: 45px;
 }
 
 footer {
